# OpenStudio-AI

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  developer-setup.md  plugin-sdk.md
examples/: example_plugin.py  openstudio_plugin.json
frontend/: eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
frontend/src/components/ui/: Button.tsx  Input.tsx  (+3 more)
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/stores/: app.store.ts  job.store.ts  model.store.ts  project.store.ts  workflow.store.ts
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts  ipc.ts
python/: __init__.py  main.py  pyproject.toml  requirements.txt
python/ai/: background_removal.py  image_generation.py  speech_recognition.py  tts.py  upscaling.py
python/api/: app.py
python/api/routes/: __init__.py  generate.py  health.py  jobs.py  models.py  plugins.py  system.py  workflows.py
python/core/: config.py  database.py  gpu_scheduler.py  job_queue.py  logging_setup.py  model_manager.py  workflow_engine.py
sdk/python/openstudio_sdk/: __init__.py
sdk/typescript/: package.json
sdk/typescript/src/: index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  asset.rs  job.rs  mod.rs  model.rs  plugin.rs  project.rs  python.rs  settings.rs  workflow.rs
src-tauri/src/db/: mod.rs
src-tauri/src/python/: mod.rs
src-tauri/src/state/: mod.rs
tests/frontend/: app.store.test.ts
tests/python/: conftest.py  test_api_routes.py  test_job_queue.py  test_workflow_engine.py
workflows/: basic-image-gen.json  transcribe-and-tts.json
(+16 files in other folders)
